<resources>
    <string name="app_name">Calculator</string>
    <string name="answer">Answer</string>
    <string name="div">÷</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="mul">x</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="del">DEL</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="c">C</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_dot">.</string>
    <string name="_0">0</string>
    <string name="_equal">=</string>
    <string name="answer2">Answer</string>
    <string name="off2">OFF</string>
</resources>
