<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:visibility="visible"
    android:background="@color/dim_foreground_material_light"
    android:accessibilityLiveRegion="polite">


    <EditText
        android:maxLength="10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:paddingBottom="40dp"
        android:background="@color/button_material_dark"
        android:layout_alignParentEnd="true"
        android:inputType="none" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/div"
        android:id="@+id/button"
        android:padding="25dp"
        android:layout_alignTop="@+id/button2"
        android:layout_alignParentStart="true" />

    <Button
        style="@style/Base.TextAppearance.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plus"
        android:id="@+id/button2"
        android:padding="25dp"
        android:layout_alignTop="@+id/button3"
        android:layout_toEndOf="@+id/button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minus"
        android:id="@+id/button3"
        android:padding="25dp"
        android:layout_alignTop="@+id/button4"
        android:layout_toStartOf="@+id/button4" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mul"
        android:id="@+id/button4"
        android:padding="25dp"
        android:layout_marginTop="54dp"
        android:layout_below="@+id/textView"
        android:layout_alignStart="@+id/button8" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_7"
        android:id="@+id/button5"
        android:layout_below="@+id/button"
        android:layout_alignParentStart="true"
        android:padding="25dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_8"
        android:id="@+id/button6"
        android:layout_alignTop="@+id/button5"
        android:layout_toEndOf="@+id/button5"
        android:padding="25dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_9"
        android:id="@+id/button7"
        android:layout_alignTop="@+id/button6"
        android:layout_toStartOf="@+id/button4"
        android:padding="25dp"/>

    <Button
        android:text="@string/off2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button8"
        android:padding="25dp"
        android:layout_below="@+id/button3"
        android:layout_alignEnd="@+id/textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_4"
        android:id="@+id/button9"
        android:layout_below="@+id/button5"
        android:layout_alignParentStart="true"
        android:padding="25dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_5"
        android:id="@+id/button10"
        android:layout_alignTop="@+id/button9"
        android:layout_toEndOf="@+id/button9"
        android:padding="25dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_6"
        android:id="@+id/button11"
        android:layout_alignTop="@+id/button10"
        android:layout_toStartOf="@+id/button8"
        android:padding="25dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/c"
        android:id="@+id/button12"
        android:layout_alignTop="@+id/button11"
        android:layout_alignEnd="@+id/button8"
        android:padding="25dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1"
        android:id="@+id/button13"
        android:padding="25dp"
        android:layout_below="@+id/button9"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2"
        android:id="@+id/button14"
        android:layout_below="@+id/button9"
        android:layout_alignEnd="@+id/button10"
        android:padding="25dp"
        android:paddingLeft="21dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_3"
        android:id="@+id/button15"
        android:layout_alignTop="@+id/button14"
        android:layout_toStartOf="@+id/button12"
        android:padding="25dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_dot"
        android:id="@+id/button16"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button13"
        android:layout_toStartOf="@+id/button14"
        android:padding="25dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:id="@+id/button17"
        android:padding="25dp"
        android:layout_alignTop="@+id/button16"
        android:layout_alignStart="@+id/button14"
        android:layout_toStartOf="@+id/button18" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_equal"
        android:id="@+id/button18"
        android:layout_below="@+id/button12"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/button17"
        android:padding="25dp"/>
</RelativeLayout>
